{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 20,
  "lineage": "22d8a25a-1d1c-60c4-c42e-4d53b0ce7ba7",
  "resources": [
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:internet-gateway/igw-05c238d73719c0828",
            "id": "igw-05c238d73719c0828",
            "owner_id": "958661899676",
            "vpc_id": "vpc-03fddfa26351a01e2"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:route-table/rtb-03fb4fd58fab5c774",
            "id": "rtb-03fb4fd58fab5c774",
            "owner_id": "958661899676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c238d73719c0828",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fddfa26351a01e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_internet_gateway.igw",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f850dad28a9d3ae",
            "route_table_id": "rtb-03fb4fd58fab5c774",
            "subnet_id": "subnet-0c8cc4dc38223815b"
          },
          "dependencies": [
            "module.vpc1.aws_internet_gateway.igw",
            "module.vpc1.aws_route_table.public",
            "module.vpc1.aws_subnet.public",
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f781f2c994d94c2",
            "route_table_id": "rtb-03fb4fd58fab5c774",
            "subnet_id": "subnet-0d6e58af56bcf4f9e"
          },
          "dependencies": [
            "module.vpc1.aws_internet_gateway.igw",
            "module.vpc1.aws_route_table.public",
            "module.vpc1.aws_subnet.public",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-00af2edf4ac5fd5bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00af2edf4ac5fd5bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03fddfa26351a01e2"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-065f01740f25fd225",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065f01740f25fd225",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03fddfa26351a01e2"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-0c8cc4dc38223815b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8cc4dc38223815b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03fddfa26351a01e2"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-0d6e58af56bcf4f9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6e58af56bcf4f9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03fddfa26351a01e2"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:vpc/vpc-03fddfa26351a01e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0733d9ef7ccb4b078",
            "default_route_table_id": "rtb-0a6c9b8fd15aa3183",
            "default_security_group_id": "sg-032757d25d1f52bb1",
            "dhcp_options_id": "dopt-84beeeff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03fddfa26351a01e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6c9b8fd15aa3183",
            "owner_id": "958661899676"
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:internet-gateway/igw-031fea105f842c07a",
            "id": "igw-031fea105f842c07a",
            "owner_id": "958661899676",
            "vpc_id": "vpc-02c55b237c62f5287"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:route-table/rtb-075c9bdaf6e89a152",
            "id": "rtb-075c9bdaf6e89a152",
            "owner_id": "958661899676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031fea105f842c07a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c55b237c62f5287"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc2.aws_internet_gateway.igw",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9a4af4cd14060ec",
            "route_table_id": "rtb-075c9bdaf6e89a152",
            "subnet_id": "subnet-0e7a461ea81ad8b1b"
          },
          "dependencies": [
            "module.vpc2.aws_internet_gateway.igw",
            "module.vpc2.aws_route_table.public",
            "module.vpc2.aws_subnet.public",
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064a0217f40c4fbce",
            "route_table_id": "rtb-075c9bdaf6e89a152",
            "subnet_id": "subnet-0f8ccaec3d3bea0d8"
          },
          "dependencies": [
            "module.vpc2.aws_internet_gateway.igw",
            "module.vpc2.aws_route_table.public",
            "module.vpc2.aws_subnet.public",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-047cbceee8accac27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047cbceee8accac27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02c55b237c62f5287"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-02075de88ef752095",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02075de88ef752095",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02c55b237c62f5287"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-0e7a461ea81ad8b1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7a461ea81ad8b1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02c55b237c62f5287"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:subnet/subnet-0f8ccaec3d3bea0d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8ccaec3d3bea0d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "958661899676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-02c55b237c62f5287"
          },
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:958661899676:vpc/vpc-02c55b237c62f5287",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08341c2f61a3b4bb5",
            "default_route_table_id": "rtb-00389e8b500957a32",
            "default_security_group_id": "sg-0fd53096478e0184d",
            "dhcp_options_id": "dopt-84beeeff",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c55b237c62f5287",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00389e8b500957a32",
            "owner_id": "958661899676"
          }
        }
      ]
    }
  ]
}